// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserRoleFunctionTabComponent Check parents checkbox 1`] = `
<pf-user-role-function-tab
  currentRole={[Function Object]}
  currentRoleSubscription={[Function Subscriber]}
  saveButtonText={[Function String]}
  saveButtonTextSubscription={[Function Subscriber]}
  store={[Function Store]}
>
  <div>
    <div
      class="scrollable"
    >
      <ul
        class="list-group nav"
      >
        
      </ul>
    </div>
    <button
      class="btn btn-primary"
      data-qa-id="btn-save"
      type="button"
    >
      Save
    </button>
  </div>
</pf-user-role-function-tab>
`;

exports[`UserRoleFunctionTabComponent Page load 1`] = `
<pf-user-role-function-tab
  currentRole={[Function Object]}
  currentRoleSubscription={[Function Subscriber]}
  saveButtonText={[Function String]}
  saveButtonTextSubscription={[Function Subscriber]}
  store={[Function Store]}
>
  <div>
    <div
      class="scrollable"
    >
      <ul
        class="list-group nav"
      >
        
      </ul>
    </div>
    <button
      class="btn btn-primary"
      data-qa-id="btn-save"
      type="button"
    >
      Save
    </button>
  </div>
</pf-user-role-function-tab>
`;

exports[`UserRoleFunctionTabComponent Save Changes 1`] = `
<pf-user-role-function-tab
  currentRole={[Function Object]}
  currentRoleSubscription={[Function Subscriber]}
  saveButtonText={[Function String]}
  saveButtonTextSubscription={[Function Subscriber]}
  store={[Function Store]}
>
  <div>
    <div
      class="scrollable"
    >
      <ul
        class="list-group nav"
      >
        
      </ul>
    </div>
    <button
      class="btn btn-primary"
      data-qa-id="btn-save"
      type="button"
    >
      
    </button>
  </div>
</pf-user-role-function-tab>
`;
